--- a/JMENA/src/log4j.properties
+++ b/JMENA/src/log4j.properties
@@ -1,19 +1,19 @@
-log4j.rootLogger=ERROR, stdout, logfile
+log4j.rootLogger=DEBUG, stdout, logfile
 #log4j.rootLogger=INFO, stdout
 
 log4j.logger.httpclient.wire.header=ERROR
 log4j.logger.org.apache.commons.httpclient=ERROR
 
 # SqlMap logging configuration...
-log4j.logger.com.ibatis=ERROR
-log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=ERROR
-log4j.logger.com.ibatis.common.jdbc.ScriptRunner=ERROR
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
 
-log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=ERROR
-log4j.logger.java.sql.Connection=ERROR
-log4j.logger.java.sql.Statement=ERROR 
-log4j.logger.java.sql.PreparedStatement=ERROR
-log4j.logger.java.sql.ResultSet=ERROR
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG 
+log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
 
 log4j.logger.org.apache = INFO
  
